# OOPs-lab

./: ClassStuff.java  Notes.java  README.md  Trial.java  jdbc.java  rah-service_1.1.14_arm64.deb
Assignment_3/: Feedback.java  Registration_Page.java  calc.java  graph.java  login.java  paint.java  traffic.java
gaticc/: CMakeLists.txt  README.md  bump_version.sh  onnx.proto  requirements.txt  setup.py
gaticc/doc/: python.md
gaticc/examples/cifar10/: cifar10.py
gaticc/examples/coco/: eval.py
gaticc/examples/imagenet/: imagenet.py  imagenet_sim.py  imagenet_uart.py
gaticc/examples/mnist/: mnist.py  mnist_sim.py
gaticc/include/: gati.h
gaticc/python/: aux.py  gati.py
gaticc/scripts/: align_app.py  build.sh  extract_images_and_labels.py  im2col.py  infer.py  install_deps.sh  install_test_models.sh  nms_setup.sh  onnx_expose_intermediates.py  onnx_gen.py  ort_sim_cmp.py  quantize.py  server.py  test_nms.py  train.py  uart_server.py  viz_align.py
gaticc/src/: argagg.h  bindings.cpp  executor.cpp  executor.h  gati.cpp  instgen.cpp  instgen.h  instructions.h  main.cpp  ml_inference.py  onnx_parser.cpp  onnx_parser.h  optimization.cpp  optimization.h  options.cpp  options.h  pch.h  preprocess.py  rt.cpp  rt.h  sim.cpp  sim.h  tensor.cpp  tensor.h  utils.cpp  utils.h  version.h
gaticc/tests/: CMakeLists.txt  test_compile.py  test_dispatch.py  test_full.py  test_run.py  test_sim.py  test_summary.py
lab/internal/: 10th.java  11th.java  12th.java  13th.java  14th.java  15th.java  16th.java  20th.java  21th.java  22nd.java  23rd.java  2nd.java  3rd.java  4th.java  5th.java  8th.java  9th.java  twent.java
lab/week1/: 1.java  2.java  3.java  4.java  5.java  6.java
lab/week13/: 4.java  4th.java
lab/week2/: 1.java  2.java  3.java  4.java  5.java  6.java  7.java
lab/week3/: 1.java  2.java  3.java  4.java
lab/week5/: 1.java  2.java  3.java  4.java
lab/week6/: 1.java  2.java  3.java
lab/week7/: 1.java
